@@ -254,8 +254,8 @@ stamp-gdk-pixbuf-marshal.h: @REBUILD@ $(srcdir)/gdk-pixbuf-marshal.list
 	cd $(srcdir) \
 	&& $$glib_genmarshal --prefix=gdk_pixbuf_marshal gdk-pixbuf-marshal.list --header >> xgen-gmh	\
 	&& (cmp -s xgen-gmh gdk-pixbuf-marshal.h || cp xgen-gmh gdk-pixbuf-marshal.h)			\
-	&& rm -f xgen-gmh xgen-gmh~
-
+	&& rm -f xgen-gmh xgen-gmh~									\
+	&& echo timestamp > $(@F)
 stamp-gdk-pixbuf-marshal.c: @REBUILD@ $(srcdir)/gdk-pixbuf-marshal.list
 	case @GLIB_GENMARSHAL@ in									\
 	   .*) glib_genmarshal=`pwd`/@GLIB_GENMARSHAL@ ;;				\
@@ -264,4 +264,6 @@ stamp-gdk-pixbuf-marshal.c: @REBUILD@ $(srcdir)/gdk-pixbuf-marshal.list
 	cd $(srcdir) \
 	&& $$glib_genmarshal --prefix=gdk_pixbuf_marshal gdk-pixbuf-marshal.list --body >> xgen-gmc	\
 	&& (cmp -s xgen-gmc gdk-pixbuf-marshal.c || cp xgen-gmc gdk-pixbuf-marshal.c)			\
-	&& rm -f xgen-gmc xgen-gmc~
+	&& rm -f xgen-gmc xgen-gmc~									\
+	&& echo timestamp > $(@F)
+
