@@ -1,3 +1,8 @@
+Mon Jun 25 00:28:11 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* Makefile.am: Actually update timestamps, so rules don't
+	constantly run.
+
 2001-06-11  Havoc Pennington  <hp@redhat.com>
 
 	* Makefile.am (stamp-gdk-pixbuf-marshal.c): glib_genmarshal
